src/snapshots/venial__tests__parse_tuple_struct_attributes.snap
---
source: src/tests.rs
assertion_line: 202
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        fields: Tuple(
            [
                TupleField {
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: A,
                            },
                        ],
                    },
                },
                TupleField {
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: B,
                            },
                        ],
                    },
                },
            ],
        ),
    },
)
