src/snapshots/venial__tests__parse_tuple_struct_empty_where_clause.snap
---
source: src/tests.rs
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        tk_struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: Some(
            [],
        ),
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        A,
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        B,
                    ],
                },
            ],
        ),
        tk_semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
