src/snapshots/venial__tests__parse_tuple_struct_generic_params.snap
---
source: src/tests.rs
assertion_line: 365
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        name: "Hello",
        generic_params: Some(
            [
                "<",
                "X",
                ",",
                "Y",
                ":",
                "Z",
                "<",
                "A",
                ">",
                ",",
                "Z",
                ">",
            ],
        ),
        where_clauses: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "A",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "B",
                    ],
                },
            ],
        ),
    },
)
