src/snapshots/venial__tests__parse_tuple_struct_vis-2.snap
---
source: src/tests.rs
assertion_line: 114
expression: struct_type_pub_crate
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub(
                "crate",
            ),
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "A",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "B",
                    ],
                },
            ],
        ),
    },
)
