src/snapshots/venial__tests__parse_tuple_struct_vis-3.snap
---
source: src/tests.rs
assertion_line: 118
expression: struct_type_crate
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            crate,
        ),
        name: "Hello",
        generic_params: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "A",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "B",
                    ],
                },
            ],
        ),
    },
)
