src/snapshots/venial__tests__parse_tuple_struct_vis.snap
---
source: src/tests.rs
assertion_line: 113
expression: struct_type_pub
---
Struct(
    Struct {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "A",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "B",
                    ],
                },
            ],
        ),
    },
)
