src/snapshots/venial__tests__parse_tuple_struct_where_clause.snap
---
source: src/tests.rs
assertion_line: 319
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: Some(
            [
                where,
                A,
                ":",
                B,
                ",",
                C,
                "<",
                D,
                ">",
                ":",
                E,
                "<",
                F,
                ">",
            ],
        ),
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        A,
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        B,
                    ],
                },
            ],
        ),
    },
)
