src/snapshots/venial__tests__parse_type_complex.snap
---
source: src/tests.rs
expression: ty_decl
---
TyDefinition(
    TyDefinition {
        attributes: [
            Attribute {
                tk_hash: Punct {
                    char: '#',
                    spacing: Alone,
                },
                tk_brackets: [],
                path: [
                    attribute,
                ],
                value: Empty,
            },
        ],
        vis_marker: Some(
            pub(
                crate,
            ),
        ),
        tk_type: Ident(
            type,
        ),
        name: Ident(
            MyType,
        ),
        bound: None,
        tk_equals: Some(
            Punct {
                char: '=',
                spacing: Alone,
            },
        ),
        initializer_ty: Some(
            [
                some,
                ":",
                ":",
                module,
                ":",
                ":",
                OtherType,
                "<",
                i32,
                ",",
                10,
                ">",
                ":",
                ":",
                AssocType,
                "<",
                Item,
                "=",
                char,
                ">",
            ],
        ),
        tk_semicolon: Punct {
            char: ';',
            spacing: Alone,
        },
    },
)
