src/snapshots/venial__tests__parse_type_simple.snap
---
source: src/tests.rs
expression: ty_decl
---
TyDefinition(
    TyDefinition {
        attributes: [],
        vis_marker: None,
        tk_type: Ident(
            type,
        ),
        name: Ident(
            MyType,
        ),
        tk_equals: Punct {
            char: '=',
            spacing: Alone,
        },
        initializer_ty: [
            std,
            ":",
            ":",
            string,
            ":",
            ":",
            String,
        ],
        tk_semicolon: Punct {
            char: ';',
            spacing: Alone,
        },
    },
)
