src/snapshots/venial__tests__parse_union.snap
---
source: src/tests.rs
assertion_line: 73
expression: union_type
---
Union(
    Union {
        attributes: [],
        vis_marker: None,
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: [
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    a,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    A,
                ],
            },
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    b,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    B,
                ],
            },
        ],
    },
)
