src/snapshots/venial__tests__parse_unit_struct.snap
---
source: src/tests.rs
assertion_line: 12
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        contents: Unit,
    },
)
