src/snapshots/venial__tests__parse_unit_struct_attributes.snap
---
source: src/tests.rs
assertion_line: 229
expression: struct_type
---
Struct(
    Struct {
        attributes: [
            #[
                hello,
            ],
        ],
        vis_marker: Some(
            pub,
        ),
        _struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clauses: None,
        fields: Unit,
        _semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
